[gd_scene load_steps=3 format=3 uid="uid://dfc1rfdj3ibh8"]

[ext_resource type="Script" path="res://Core/GUI/MainMenu/main_menu.gd" id="1_enann"]
[ext_resource type="Texture2D" uid="uid://c42k23rykaocg" path="res://Core/GUI/MainMenu/main_menu_background.png" id="2_cief4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enann")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cief4")
expand_mode = 1
stretch_mode = 1
flip_v = true

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.5
offset_top = -185.0
offset_right = 370.5
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center][color=fff]MASTER OF MANA[/color][/center]"
fit_content = true

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 19.0
offset_right = 96.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="StartGameButton" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="TutorialButton" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "How to play
"

[node name="CreditsButton" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
